# media-server

./: .gitignore  ARCHITECTURE.md  Makefile
.github/: copilot-instructions.md
client/: README.md  app.json  package.json
client/app/: +html.tsx  _layout.tsx
client/app/(tabs)/: _layout.tsx
client/app/(tabs)/files/: index.tsx
client/app/media-viewer/: [fileId].tsx
client/components/: GlobalContext.tsx
client/constants/: Config.ts
client/patches/: @react-navigation%2Fbottom-tabs@7.4.6.patch
client/src/: test.html
client/styles/: global.css  viewer.module.css
media-server-client/: package.json
media-server-client/app/: _layout.tsx
media-server-client/app/(tabs)/: _layout.tsx  index.tsx
media-server-client/app/(tabs)/files/: _layout.tsx  index.tsx
media-server-client/app/image/: [fileId].tsx
media-server-client/app/video/: [fileId].tsx
media-server-client/components/: GlobalContext.tsx
packaging/: PKGBUILD  README.md  media-server.service
server/: .gitignore  Cargo.toml  README.md  config.dev.json  config.json
server/src/: config.rs  db.rs  handlers.rs  lib.rs  main.rs  models.rs  scanner.rs  startup.rs  state.rs
server/src/handlers/: admin.rs  core.rs  mod.rs  streaming.rs  thumbnails.rs
server/tests/: regenerate_thumbnails.rs
