[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
walkdir = "2.3"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
mime_guess = "2.0"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
# added for streaming and thumbnails
tokio-util = { version = "0.7", features = ["io"] }
image = "0.24"
# static file serving
tower-http = { version = "0.3", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dirs = "4"
nix = "0.26"

[dev-dependencies]
